@startuml
skinparam shadowing false
skinparam linetype ortho
skinparam defaultFontSize 10
skinparam defaultFontName "DejaVu Sans"
skinparam packageStyle rectangle

package "Firestore (Cloud)" {
  entity "users" as users {
    uid : String [PK]
    --
    email : String
    nombre : String
    presupuesto : Double
    moneda : String
    rol : String
    fechaCreacion : Timestamp
  }
}

package "Room Database (Local)" {
  entity "gastos" as gastos {
    id : int [PK, auto]
    --
    userId : String [FK]
    nombreJuego : String
    precio : Double
    fecha : Long (ms)
    mes : int
    anio : int
    imagenUrl : String
  }

  entity "wishlist" as wishlist {
    id : int [PK, auto]
    --
    userId : String [FK]
    gameId : int
    nombre : String
    fechaLanzamiento : String
    imagenUrl : String
    plataforma : String
    precioEstimado : Double
  }

  entity "lanzamientos" as lanzamientos {
    id : int [PK, auto]
    --
    userId : String [FK]
    gameId : int
    nombre : String
    fechaLanzamiento : Long (ms)
    precio : Double
    imagenUrl : String
    plataformas : String
    rating : Double
  }
}

users ||..o{ gastos : "1:N"
users ||..o{ wishlist : "1:N"
users ||..o{ lanzamientos : "1:N"

@enduml
